--- a/korok_hunt/css/main.css
+++ b/korok_hunt/css/main.css
@@ -1,53 +1,151 @@
-iframe {
-    height: 96vh;
-    width: 70vw;
-    box-sizing: border-box;
+/* Resources */
+@font-face {
+    font-family: 'Hylia Serif';
+    src: url('/korok_hunt/fonts/HyliaSerifBeta-Regular.ttf');
 }
 
-.center {
-    display: block;
+
+
+/* Main Page Styling */
+
+    /* Containers */
+.top_container{
+    display: flex;
+    flex-direction: row;
+    padding-top: 1%;
+}
+
+.logo_container{
+   width: 11%;
+   align-items: center;
+}
+
+.l_container{
+    width: 78%;
+}
+
+.text_container{
+    background-color: rgb(226, 144, 72);
+    border-radius: 2vw;
+    box-shadow: 0 5px 10px rgb(142, 118, 86);
+
+    width: 82%;
     margin-left: auto;
     margin-right: auto;
 }
 
-.popup_align {
-    position: absolute;
-    left: 0;
-    right: 0;
+    /* Text */
+.b_paragraph {
+    font-family: Hylia Serif;
+    color: rgb(122, 81, 0);
+    text-shadow: 0 0 5px rgba(115, 58, 17, .35);
+
+    text-align: left;
     margin-left: auto;
     margin-right: auto;
+    width: 95%;
 
-    bottom: 0;
-    top: 0;
-    margin-bottom: auto;
-    margin-top: auto;
+    font-size: calc(92px - 4vw);
+}
 
+.t_paragraph {
+    font-family: Hylia Serif;
+    color: rgb(82, 58, 11);
+    text-shadow: 0 0 5px rgb(115, 58, 17, .5);
 
-    z-index: 2;
-    
-    background-size: contain;
-    container-type: size;
-    
     text-align: center;
+    width: 100%;
+    padding-top: 10px;
+
+    font-size: calc(122px - 4vw);
 }
 
-.s_popup {
-    aspect-ratio: 680 / 410;
-    max-height: 60%;
-    background-repeat: no-repeat;
+.bottom_paragraph {
+    font-family: Hylia Serif;
+    color: rgb(121, 100, 72);
+    text-shadow: 0 0 5px rgb(115, 58, 17, .5);
+
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+
+    font-size: 18pt;
+}
+
+    /* Images */
+.logo_container img{
+    width: 100%;
+}
+
+.leaderboard_button img{
+    width: 40%;
+}
+
+
+/* Phone Display*/
+@media all and (max-device-aspect-ratio:1){
+    .top_container{
+        display: flex;
+        flex-direction: column;
+        padding-top: 1%;
+        margin-left: 1%;
+        width: 98%;
+    }
     
-    background-image: url("/korok_hunt/img/s_popup_bg.svg");
+    .logo_container{
+        align-items: center;
+        width: 100%;
+    }
+
+    .l_container{
+        width: 98%;
+        aspect-ratio: 1.5;
+    }
+
+    .text_container{
+        width: 96%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .b_paragraph{
+        width: 94%;
+    }
+
+    .logo_container a{
+        text-align: center;
+        display: block;
+        width: fit-content;;
+        height: fit-content;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .logo_container img{
+        height: 25vh;
+        width: auto;
+        max-width: 100%;
+    }
+
+    .leaderboard_button img{
+        width: 90%;
+    }
 }
 
-.l_popup {
-    aspect-ratio: 530 / 750;
-    max-height: 105%;
-    background-repeat: no-repeat;
-
-    background-image: url("/korok_hunt/img/l_popup_bg.svg");
+.l_container > .map_frame{
+    border: 10px solid rgb(226, 144, 72);
+    border-radius: 2vw;
+    box-shadow: 0 0 20px rgb(142, 118, 86);
+    
+    width: 100%;
+    aspect-ratio: 2;
+    border-radius: 2vw;
+    overflow: hidden;
 }
 
 
+
+/* Popup Styling*/
 .s_popup_div {
     margin-top: auto;
     margin-bottom: auto;
@@ -70,25 +168,85 @@ iframe {
 }
 
 
-.button {
-    background: url("/korok_hunt/img/button_bg.svg") no-repeat;
+.align_popup{
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+    margin-top: auto;
+
+    background-size: contain;
+    container-type: size;
+}
+
+.input_popup{
+    background-color: rgb(151, 107, 62);
+    border: 1vw solid rgb(74, 74, 74);
+    border-radius: 2%;
+
+    height: 40%;
+    aspect-ratio: 1.66;
+    z-index: 2;
+
+    padding-left: 3vw;
+    padding-right: 3vw;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+}
+
+.info_popup{
+    background-color: rgb(151, 107, 62);
+    border: 10px solid rgb(74, 74, 74);
+    border-radius: 4vw;
+    box-shadow: 0 0 10vw black;
+
+    height: 87%;
+    aspect-ratio: .7;
+    z-index: 3;
+
+    padding-left: 3vw;
+    padding-right: 3vw;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+
+    overflow-y: hidden;
+}
+.info_popup > img{
+    height: 60%;
+    width: auto;
+}
+
+.popup_button_container{
+    display: flex;
+    flex-direction: column;
+
+    margin-bottom: auto;
+    align-items: flex-end;
+}
+.popup_button_container > .popup_button {
+    background-color: rgb(255, 194, 131);
+    border-radius: 6cqi;
+    width: 80cqi;
+    aspect-ratio: 300 / 75;
+    
+
+    font-family: Hylia Serif; 
+    color: goldenrod; 
+    font-size: 4em;
+
     border: none;
     outline: none;
     outline-width: 0;
-    width: 80cqi;
-    aspect-ratio: 300 / 75;
-    background-size: contain;
 }
 
-.bottom_align {
-    position: absolute;
-    bottom: 0px;
-}
-
-
-@font-face {
-    font-family: 'Hylia Serif';
-    src: url('/korok_hunt/fonts/HyliaSerifBeta-Regular.ttf');
+.korok_popup_text{
+    font-family: Hylia Serif;
+    font-size: 2em;
+    color: whitesmoke;
 }
 
 
@@ -115,57 +273,118 @@ iframe {
     color: whitesmoke;
 }
 
-.f_text {
-    font-family: Hylia Serif;
-    font-size: 5em;
-    color: whitesmoke;
-}
-
-.area_text {
+.account_text_input{
     font-family: Hylia Serif;
     font-size: 4.5em;
     color: black;
-}
 
-.button_text {
-    font-family: Hylia Serif; 
-    color: goldenrod; 
-    font-size: 7.5em; 
-    margin-top: auto; 
-    margin-bottom: auto;
-}
-
-
-
-.b_paragraph {
-    font-family: Hylia Serif;
-    font-size: 24px;
-    color: rgb(122, 81, 0);
-
-    text-align: left;
-    
-    margin-left: auto;
-    margin-right: auto;
-    width: 92%
-}
-
-.t_paragraph {
-    font-family: Hylia Serif;
-    font-size: 32px;
-    color: rgb(82, 58, 11);
-
+    outline: none;
+    border: none;
     text-align: center;
+    resize: none;
+    overflow: auto;
+    white-space: nowrap;
+    overflow-y: hidden;
+}
+
+/* Phone Display*/
+@media all and (max-device-aspect-ratio:1){
+    .info_popup{
+        width: 90%;
+        aspect-ratio: .7;
+    }
+    .info_popup > img{
+        height: 55%;
+    }
+    
+    .korok_popup_text{
+        font-size: calc(116px - 4.5vw);
+    }
+}
+
+
+
+/* Leaderboard styling */
+.l_container > .leaderboard_frame{
+    border: 10px solid rgb(226, 144, 72);
+    border-radius: 2vw;
+    box-shadow: 0 0 20px rgb(142, 118, 86);
+    background-color: rgb(181, 115, 57);
+    
     width: 100%;
+    height: 75vh;
+    border-radius: 2vw;
+
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
-.bottom_paragraph {
-    font-family: Hylia Serif;
-    font-size: 18px;
-    color: rgb(82, 58, 11);
+.leaderboard_frame::-webkit-scrollbar{
+    width: 0px;
+    background: transparent;
+}
 
-    text-align: center;
-    
+.leaderboard_container{
+    width: 90%;
+    display: flex;
+    flex-direction: row;
     margin-left: auto;
     margin-right: auto;
-    width: 80%;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+
+    background-color: rgb(211, 154, 61);
+
+    font-family: Hylia Serif;
+    color: rgb(122, 81, 0);
+    text-shadow: 0 0 5px rgba(115, 58, 17, .35);
+    font-size: 2vw;
+}
+
+.leaderboard_container username{
+    padding-left: 1vw;
+    padding-right: 2vw;
+    text-wrap: wrap;
+}
+
+.leaderboard_container count{
+    margin-left: auto;
+    width: auto;
+    text-wrap: nowrap;
+}
+
+
+/* Phone Display*/
+@media all and (max-device-aspect-ratio:1){
+    .l_container > .leaderboard_frame{
+        height: 60vh;
+    }
+
+    .leaderboard_container{
+        font-size: calc(92px - 4vw);
+    }
+}
+
+
+/* Alignment */
+html{
+    overflow-x: hidden;
+}
+body{
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+
+    background-color: burlywood;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
