--- a/korok_hunt/css/main.css
+++ b/korok_hunt/css/main.css
@@ -75,6 +75,7 @@
     /* Images */
 .logo_container img{
     width: 100%;
+    filter: drop-shadow(0 0 20px rgb(92, 76, 56));
 }
 
 .leaderboard_button img{
@@ -145,30 +146,37 @@
 
 
 
-/* Popup Styling*/
-.s_popup_div {
-    margin-top: auto;
-    margin-bottom: auto;
+/* User Info Styling */
+.user_display{
+    background-color: rgb(151, 107, 62);
+    border-left: 10px solid rgb(74, 74, 74);
+    border-bottom: 10px solid rgb(74, 74, 74);;
+    border-bottom-left-radius: 3vw;
+    box-shadow: 0 0 10vw black;
+    
+    position: absolute;
     top: 0;
-    bottom: 0;
+    right: 0;
 
-    width: 75%;
-    height: 100%;
-    container-type: inline-size;
-    
-    overflow: hidden;
-}
+    font-family: Hylia Serif;
+    font-size: 3.5em;
+    color: goldenrod;
+    text-wrap: wrap;
+    overflow-wrap: break-word;
 
-.l_popup_div {
-    width: 75%;
-    height: 100%;
-    container-type: inline-size;
-    
-    overflow: hidden;
+    max-width: 35%;
+    padding-left: .25em;
+    padding-right: .25em;
+    padding-bottom: .1em;
 }
 
 
+
+/* Popup Styling*/
 .align_popup{
+    opacity: 0;
+    visibility: hidden;
+
     position: absolute;
     left: 0;
     right: 0;
@@ -183,123 +191,149 @@
     container-type: size;
 }
 
+.info_popup{
+    background-color: rgb(151, 107, 62);
+    border: 10px solid rgb(74, 74, 74);
+    border-radius: 4vmax;
+    box-shadow: 0 0 0px 1000px  rgb(0,0,0, .75);
+
+    max-width: 90%;
+    max-height: 90%;
+    aspect-ratio: .6;
+    z-index: 3;
+
+    padding-left: 2vw;
+    padding-right: 2vw;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    overflow-y: hidden;
+}
+.info_popup > img{
+    height: 55%;
+    width: auto;
+}
+
+.korok_popup_text{
+    font-family: Hylia Serif;
+    font-size: min(5vh, 8.33vw);
+    color: whitesmoke;
+    margin-bottom: auto;
+}
+.korok_popup_text > .korok_popup_prev{
+    font-size: min(4vh, 6.64vw);
+    line-height: min(4vh, 6.64vw);;
+    color: rgb(193, 193, 193);
+    padding-top: 2%;
+}
+
+.info_popup_text{
+    font-family: Hylia Serif;
+    /*font-size: min(4.25vh, 6.07vw);  0.7 aspect */ 
+    font-size: min(4vh, 6.66vw);
+    color: whitesmoke;
+}
+.popup_title_text {
+    font-family: Hylia Serif;
+    /*font-size: min(5.5vh, 7.85vw); .7 aspect*/
+    font-size: min(4.71vh, 7.85vw);
+    color: rgba(41, 29, 0, 0.785);
+    padding-bottom: 3vh;
+}
+.popup_title_text > u {
+    font-family: Hylia Serif;
+    /*font-size: min(6.4vh, 9.17vw); .7 aspect*/
+    font-size: min(5.5vh, 9.17vw);
+    color: goldenrod;
+}
+
+
 .input_popup{
     background-color: rgb(151, 107, 62);
     border: 1vw solid rgb(74, 74, 74);
-    border-radius: 2%;
+    border-radius: 4vmax;
+    box-shadow: 0 0 0px 1000px  rgb(0,0,0, .75);
 
-    height: 40%;
-    aspect-ratio: 1.66;
+    max-height: 60%;
+    max-width: 90%;
+    aspect-ratio: 1.25;
     z-index: 2;
 
     padding-left: 3vw;
     padding-right: 3vw;
-    padding-top: 1vh;
-    padding-bottom: 1vh;
-}
+    padding-top: 3vh;
+    padding-bottom: 3vh;
 
-.info_popup{
-    background-color: rgb(151, 107, 62);
-    border: 10px solid rgb(74, 74, 74);
-    border-radius: 4vw;
-    box-shadow: 0 0 10vw black;
-
-    height: 87%;
-    aspect-ratio: .7;
-    z-index: 3;
-
-    padding-left: 3vw;
-    padding-right: 3vw;
-    padding-top: 1vh;
-    padding-bottom: 1vh;
-
+    display: flex;
+    flex-direction: column;
+    flex: 1;
     overflow-y: hidden;
 }
-.info_popup > img{
-    height: 60%;
-    width: auto;
+
+.input_popup_text{
+    font-family: Hylia Serif;
+    font-size: min(5vh, 6vw);
+    color: rgb(193, 193, 193);
+    text-align: center;
+}
+.input_popup_error{
+    font-family: Hylia Serif;
+    font-size: min(4vh, 4.8vw);
+    color: rgb(107, 0, 0);
+    text-align: center;
+
+    visibility: hidden;
+}
+.input_text_area{
+    font-family: Hylia Serif;
+    color: black;
+
+    width: min(45vh, 54vw);
+    height: min(6vh, 7.2vw);
+    font-size: min(6vh, 7.2vw);
+    line-height: min(6vh, 7.2vw);
+    outline: none;
+    border: none;
+
+    text-align: center;
+    resize: none;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    white-space: nowrap;
+
+    vertical-align: middle;
+}
+.input_text_area_label{
+    color: whitesmoke;
+    vertical-align: middle;
 }
 
 .popup_button_container{
-    display: flex;
-    flex-direction: column;
-
-    margin-bottom: auto;
-    align-items: flex-end;
+    margin-top: auto;
 }
 .popup_button_container > .popup_button {
     background-color: rgb(255, 194, 131);
-    border-radius: 6cqi;
-    width: 80cqi;
-    aspect-ratio: 300 / 75;
-    
+    border-radius: 2vw;
+    width: 80%;
+    aspect-ratio: 4;
 
     font-family: Hylia Serif; 
     color: goldenrod; 
-    font-size: 4em;
+    /*font-size: min(6vh, 8.57vw); .7 aspect*/
+    font-size: min(5vh, 8.33vw);
 
     border: none;
     outline: none;
     outline-width: 0;
 }
 
-.korok_popup_text{
-    font-family: Hylia Serif;
-    font-size: 2em;
-    color: whitesmoke;
-}
 
-
-.popup_text {
-    font-size: 1cqi;
-}
-
-.title_text {
-    font-family: Hylia Serif;
-    font-size: 7.5em;
-    color: goldenrod;
-}
-
-.p_text {
-    font-family: Hylia Serif;
-    font-size: 4em;
-    color: whitesmoke;
-    text-align: left;
-}
-
-.s_text {
-    font-family: Hylia Serif;
-    font-size: 3.2em;
-    color: whitesmoke;
-}
-
-.account_text_input{
-    font-family: Hylia Serif;
-    font-size: 4.5em;
-    color: black;
-
-    outline: none;
-    border: none;
-    text-align: center;
-    resize: none;
-    overflow: auto;
-    white-space: nowrap;
-    overflow-y: hidden;
-}
-
-/* Phone Display*/
-@media all and (max-device-aspect-ratio:1){
-    .info_popup{
-        width: 90%;
-        aspect-ratio: .7;
-    }
-    .info_popup > img{
-        height: 55%;
-    }
-    
-    .korok_popup_text{
-        font-size: calc(116px - 4.5vw);
-    }
+.show{
+    opacity: 1;
+    visibility: visible;
 }
 
 
@@ -338,6 +372,7 @@
     padding-bottom: 1vh;
 
     background-color: rgb(211, 154, 61);
+    border-radius: 2vh;
 
     font-family: Hylia Serif;
     color: rgb(122, 81, 0);
@@ -387,4 +422,8 @@ body{
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+}
+.v_center {
+    margin-top: auto;
+    margin-bottom: auto;
 }
